# ToDo

./: Makefile  README.md  docker-compose.yaml  package-lock.json  startup.sh
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/api/: mod.rs  task.rs  user.rs
backend/src/domain/: error.rs  mod.rs
backend/src/domain/tasks/: mod.rs  repository.rs  service.rs  task.rs
backend/src/domain/users/: mod.rs  repository.rs  service.rs  user.rs
backend/src/infrastructure/: config.rs  utils.rs
common/: Cargo.toml
common/src/model/: error.rs  task.rs  user.rs
database/: Dockerfile
database/db/migrations/: 20221210232716_create_users_table.sql  20221210232726_create_tasks_table.sql  20221210234124_insert_test_data.sql
frontend/: Cargo.toml  Dockerfile  package-lock.json  package.json
frontend/src/: app.rs  lib.rs  store.rs
frontend/src/api/: mod.rs
frontend/src/components/: mod.rs
frontend/src/components/app/: footer.rs  header.rs  link.rs  mod.rs  nav.rs
frontend/src/components/task/: details.rs  filter.rs  form.rs  mod.rs
frontend/src/routes/: about.rs  home.rs  login.rs  mod.rs  profile.rs  register.rs  tasks.rs
frontend/static/: index.html  index.ts  styles.scss
frontend/tests/: lib.rs
resources/: Design.md  Usage.md
