[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "=1.0.148", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
validator = { version = "0.16", features = ["derive"] }
regex = "1.7.0"
lazy_static = "1.4.0"
