[package]
authors = ["You <you@example.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2021"
license = "Apache-2.0/MIT"
name = "yew-app"
readme = "./README.md"
repository = "https://github.com/jetli/create-yew-app.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
log = "0.4"
serde = "1.0.148"
serde_json = "1.0.61"
reqwest = { version = "0.11.13", default-features = true, features = ["json", "rustls-tls", "cookies"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
yew-hooks = "0.2.0"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
anyhow = "1.0.51"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
strum = "0.24"
strum_macros = "0.24"
gloo = "0.8"
gloo-utils = "0.1.5"
gloo-console = "0.2.3"
wasm-bindgen-futures = "0.4.33"
yewdux = "0.9.0"
derive_more = "0.99"
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
gloo-utils = "0.1.5"
gloo-console = "0.2.3"

[dependencies.web-sys]
version = "0.3.60"
features = ["Document", "Element", "HtmlCollection", "HtmlInputElement", "HtmlFormElement"]

